# server/api/v1/system/sys_base.go
@@ -16,7 +16,7 @@ type BaseApi struct{}
 // @Summary 用户登录
 // @Produce  application/json
 // @Param data body request.LoginRequest true "用户名, 密码, 验证码"
-// @Success 200 {object} response.Response{data=system.SysUser,code=int,msg=string}
+// @Success 200 {object} response.Response{data=system.User,code=int,msg=string}
 // @Router  /public/base/login [post]
 func (b *BaseApi) Login(c *gin.Context) {
 	var loginRequest request.LoginRequest
@@ -50,8 +50,8 @@ func (b *BaseApi) Login(c *gin.Context) {
 // @Tags User
 // @Summary 用户注册
 // @Produce  application/json
-// @Param data body system.SysUser true "用户名, 密码, 验证码"
-// @Success 200 {object} response.Response{data=system.SysUser,code=int,msg=string}
+// @Param data body system.User true "用户名, 密码, 验证码"
+// @Success 200 {object} response.Response{data=system.User,code=int,msg=string}
 // @Router  /public/base/register [post]
 func (b *BaseApi) Register(c *gin.Context) {
 	var registerRequest system.User
